# progetto_finale_travel_agent_francesco_scaccetti

./: .env.example  README.md  app.py  pyproject.toml
.chainlit/: config.toml
public/: theme.css  theme.json
travel_agent_api/: main.py
travel_agent_api/routes/: chat_router.py
travel_agent_api/services/: agent_service.py
travel_agent_api/tools/: chain_historical_expert.py  chain_travel_plan.py  flights_finder.py  hotels_finder.py  weather_finder.py
