[project]
name = "travel-agent-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Francesco Scaccetti",email = "scaccettif@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "openai (>=2.41.1,<3.0.0)",
    "langchain-openai (>=1.3.2,<2.0.0)",
    "langchain-community (>=0.4.2,<0.5.0)",
    "langgraph (>=1.2.5,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-search-results (>=2.4.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "travel_agent_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
